# mail-cli

./: .env  Cargo.toml
src/: cli.rs  google.rs  mail.rs  mail_filters.rs  main.rs  store_accounts.rs  utils.rs
